# sentinel-net

./: Commands.md  README.md  app.py  best_triage_model.pth  feature_names_20260215_044841.pkl  model_metadata_20260215_044841.pkl  scaler_20260215_044841.pkl
flower_setup/pytorch-triage/: pyproject.toml
flower_setup/pytorch-triage/data/: hospital_0.csv  hospital_1.csv  hospital_2.csv  hospital_3.csv  hospital_4.csv  hospital_5.csv  hospital_6.csv  hospital_7.csv  hospital_8.csv  hospital_9.csv
flower_setup/pytorch-triage/pytorchexample/: app.py  client_app.py  data.py  final_model_weights.npz  server_app.py  task.py  triage_encoder.joblib
flower_setup/pytorch-triage/pytorchexample/data/: hospital_0.csv  hospital_1.csv  hospital_2.csv
flower_setup/quickstart-pytorch/: pyproject.toml
flower_setup/quickstart-pytorch/pytorchexample/: client_app.py  server_app.py
